[FIX] l10n_din5008: style fixes
Configure Document Layout for Paper Format European A4 for DIN 5008 Type A
Set layout to DIN 5008
Create an invoice
Open preview (portal)

Issues:
- portal preview contains a lot of white space on the right hand side
- Invoice terms and payment reference are not correctly aligned

https://wiki.documentfoundation.org/Videos/Business_letter_according_to_DIN_5008#Margins

opw-3279157

--- a/addons/l10n_din5008/static/src/scss/report_din5008.scss
+++ b/addons/l10n_din5008/static/src/scss/report_din5008.scss
@@ -3,6 +3,10 @@
     margin-left: -1rem;
     font-size: 9pt;
 
+    .container-fluid & { // center the invoice in portal preview
+       margin-left: auto;
+       margin-right: auto;
+    }
     &.header {
         table {
             width: 100%;
@@ -54,7 +58,7 @@
                 }
             }
         }
-        h2 {
+        h2, [name=payment_communication], [name=payment_term], [name=comment], [name=note], [name=incoterm] {
             margin-left: 5mm;
             margin-right: 10mm;
             margin-top: 8.46mm;
